# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
hw/hw-01/: homework-drive-duration-predict.ipynb
notebooks/: duration-prediction.ipynb
