[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Alexander Kupreyeu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
bandit = "*"
black = "*"
flake8 = "*"
mypy = "*"
pycodestyle = "*"
pydocstyle = "*"
pytest = "*"
yapf = "*"


[tool.poetry.group.mlsvc.dependencies]
jupyter = "^1.0.0"
mlflow = "^2.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
